<resources>
    <string name="app_name">My Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUp_success">signUpSuccess</string>
    <string name="Click_here_To_login">Click  <a href="">HERE</a>  To   login</string>
    <string name="my_phycisian">MY PHYCISIAN</string>
    <string name="patient_diagnosis">Patient Diagnosis</string>
    <string name="emergency">EMERGENCY</string>
    <string name="nearest_hospital">NEAREST HOSPITAL</string>
    <string name="exit">EXIT</string>
    <string name="save_diagnosis">SAVE DIAGNOSIS</string>
    <string name="back">Back</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="first_name">First Name</string>
    <string name="medical_data">Medical Data</string>
    <string name="med_facts">

        <li>
            Goose bumps evolved to make our ancestors’ hair stand up, making them appear more threatening to predators.<br />
        Wisdom teeth serve no purpose. They’re left over from hundreds of thousands of years ago. As early humans’ brains grew bigger, it reduced space in the mouth, crowding out this third set of molars.<br />
        Scientists aren\'t exactly sure why we yawn, but it may help regulate body temperature.<br />
        Your fingernails don’t actually grow after you’re dead.<br />
        If they were laid end to end, all of the blood vessels in the human body would encircle the Earth four times.<br />
        Humans are the only animals with chins.<br />
        As you breathe, most of the air is going in and out of one nostril. Every few hours, the workload shifts to the other nostril.<br />
        Blood makes up about 8 percent of your total body weight.<br />
         The human nose can detect about 1 trillion smells.<br />
          You have two kidneys, but only one is necessary to live.<br />
        Belly buttons grow special hairs to catch lint.<br />
        The satisfying sound of cracking your knuckles comes from gas bubbles bursting in your joints.<br />
        Skin is the body’s largest organ and can comprise 15 percent of a person’s total weight.<br />
        Thumbs have their own pulse.<br />
        Your tongue is made up of eight interwoven muscles, similar in structure to an elephant’s trunk or an octopus’s tentacle.<br />
        On a genetic level, all human beings are more than 99 percent identical.<br />
        The foot is one of the most ticklish parts of the body.<br />
        Extraocular muscles in the eye are the body’s fastest muscles. They allow both of your eyes to flick in the same direction in a single 50-millisecond movement.<br />
        A surgical procedure called a selective amygdalohippocampectomy removes half of the brain’s amygdala—and with it, the patient’s sense of fear.<br />
        The pineal gland, which secretes the hormone melatonin, got its name from its shape, which resembles a pine nut.<br />
        Hair grows fast—about 6 inches per year. The only thing in the body that grows faster is bone marrow.<br />
        No one really knows what fingerprints are for, but they might help wick water away from our hands, prevent blisters, or improve touch.<br />
        The heart beats more than 3 billion times in the average human lifespan.<br />
        Blushing is caused by a rush of adrenaline.<br />
        </li>

    </string>
    <string name="title_activity_patientlocation">Map</string>
</resources>